welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:4: error: not found: value lookingFor
		if (lookingFor==nums(9))
                    ^